Returning a new AdventureMap if there isn't one when game session display is returned